Enhance styling and accessibility across components; update project descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Samir Niroula</title>
 </head>
 
-<body>
+<body class="dark:bg-[#181818]">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7S8YG9VC48"></script>
 <script>
